# buwizz-pro3-bluetooth-python

./: .gitignore  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml  tasks.py
.github/workflows/: publish.yaml  test.yaml
buwizz-pro-bluetooth/: __init__.py
docs/: api.md  index.md
src/buwizz_pro3_bluetooth_python/: __init__.py  buwizz.py
tests/: test_sample.py
